--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     </head>
 
     <body>
-        
+
+        <div class="header">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="body">
+            <div class="card-1"></div>
+            <div class="card-2"></div>
+            <div class="card-3"></div>
+            <div class="card-4"></div>
+        </div>
+
+        <div class="footer">
+            Copyright The Odin Project 2021
+        </div>
     </body>
 </html>
