Fill out basic  html layout

--- a/index.html
+++ b/index.html
@@ -20,10 +20,50 @@
         </div>
 
         <div class="body">
-            <div class="card-1"></div>
-            <div class="card-2"></div>
-            <div class="card-3"></div>
-            <div class="card-4"></div>
+            
+            <div class="card-1">
+                <div class="card-header">
+                    This website is awesome
+                </div>
+                <div class="card-body">
+                    This website has some subtext that goes here under the main title.
+                </div>
+                <div class="card-button">
+                    <button>Sign up</button>
+                </div>
+                -This is an image placeholder-
+            </div>
+
+            <div class="card-2">
+                <div class="card-header">
+                    Some random information
+                </div>
+                <div class="card-content">
+                    IMAGE 1
+                    image description
+                    IMAGE 2
+                    image description
+                    IMAGE 3
+                    image description
+                    IMAGE 4
+                    image description
+                </div>
+            </div>
+
+            <div class="card-3">This is card 3 and will include a quote</div>
+
+            <div class="card-4">
+                <div class="card-header">
+                    Call to action! It's time!
+                </div>
+                <div class="card-body">
+                    Sign up for our product
+                </div>
+                <div class="card-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+
         </div>
 
         <div class="footer">
