--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <div class="body">
-            
+
             <div class="card-1">
                 <div class="card-header">
-                    This website is awesome
+                    <h1>This website is awesome</h1>
                 </div>
                 <div class="card-body">
                     This website has some subtext that goes here under the main title.
@@ -36,7 +36,7 @@
 
             <div class="card-2">
                 <div class="card-header">
-                    Some random information
+                    <h2>Some random information</h2>
                 </div>
                 <div class="card-content">
                     IMAGE 1
